can't spell today

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Edinburgh Colleg of Art</h1>
+<h1>Edinburgh College of Art</h1>
 <p>GitHub Pages.</p>
 </body>
 </html>
